[C] 5 games and 6 table was added

--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -261,55 +261,55 @@
                 </table>
             </div>
         </div>
-        <!--<div id="game-6" class="game">
+        <div id="game-6" class="game">
             <p>Игра 6</p>
             <div class="mafia-table">
                 <p>Стол 1</p>
                 <table>
-                    <tr><td>1</td><td>Крут и пряник</td></tr>
-                    <tr><td>2</td><td>Клянусь, мы шериф</td></tr>
-                    <tr><td>3</td><td>Банальная сказка</td></tr>
-                    <tr><td>4</td><td>Бандюги</td></tr>
-                    <tr><td>5</td><td>Давай по новой, Миша</td></tr>
-                    <tr><td>6</td><td>Психические элементали</td></tr>
-                    <tr><td>7</td><td>DDniwe</td></tr>
-                    <tr><td>8</td><td>Война и мир</td></tr>
-                    <tr><td>9</td><td>Руками не трогать, замечаний не делать</td></tr>
-                    <tr><td>10</td><td>Лучшие пупсики на вашу вечеринку</td></tr>
+                    <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
+                    <tr><td>2</td><td>DDniwe</td></tr>
+                    <tr><td>3</td><td>Клянусь мы шериф</td></tr>
+                    <tr><td>4</td><td>Брестолочи</td></tr>
+                    <tr><td>5</td><td>OCISLY</td></tr>
+                    <tr><td>6</td><td>Лучшие пупсики на вашу вечеринку</td></tr>
+                    <tr><td>7</td><td>Давай по новой, Миша</td></tr>
+                    <tr><td>8</td><td>Mafia House</td></tr>
+                    <tr><td>9</td><td>Креветки из Инетки</td></tr>
+                    <tr><td>10</td><td>Клан Бомбино</td></tr>
                 </table>
             </div>
             <div class="mafia-table">
                 <p>Стол 2</p>
                 <table>
-                    <tr><td>1</td><td>Easy Win</td></tr>
-                    <tr><td>2</td><td>Интроверты</td></tr>
-                    <tr><td>3</td><td>Котики</td></tr>
-                    <tr><td>4</td><td>Светик-Правдоцветик</td></tr>
-                    <tr><td>5</td><td>The Witches</td></tr>
-                    <tr><td>6</td><td>Хочу тебя обнимать</td></tr>
-                    <tr><td>7</td><td>Black hole</td></tr>
-                    <tr><td>8</td><td>Креветки из Инетки</td></tr>
-                    <tr><td>9</td><td>Брестолочи</td></tr>
+                    <tr><td>1</td><td>Мы спалим твою овцу</td></tr>
+                    <tr><td>2</td><td>Крут и пряник</td></tr>
+                    <tr><td>3</td><td>KOD</td></tr>
+                    <tr><td>4</td><td>Black hole</td></tr>
+                    <tr><td>5</td><td>Руками не трогать, замечаний не делать</td></tr>
+                    <tr><td>6</td><td>Бандюги</td></tr>
+                    <tr><td>7</td><td>Война и мир</td></tr>
+                    <tr><td>8</td><td>Интроверты</td></tr>
+                    <tr><td>9</td><td>Top Gun</td></tr>
                     <tr><td>10</td><td>Суринамские мукоеды</td></tr>
                 </table>
             </div>
             <div class="mafia-table">
                 <p>Стол 3</p>
                 <table>
-                    <tr><td>1</td><td>Мы спалим твою овцу</td></tr>
-                    <tr><td>2</td><td>Берем всё вино на себя</td></tr>
-                    <tr><td>3</td><td>Top Gun</td></tr>
-                    <tr><td>4</td><td>PZ⚡DC</td></tr>
-                    <tr><td>5</td><td>Mafia House</td></tr>
-                    <tr><td>6</td><td>OCISLY</td></tr>
-                    <tr><td>7</td><td>Компот из, сука, фруктов</td></tr>
-                    <tr><td>8</td><td>KOD</td></tr>
-                    <tr><td>9</td><td>Клан Бомбино</td></tr>
-                    <tr><td>10</td><td>Пёс да Лис 2.0</td></tr>
+                    <tr><td>1</td><td>Котики</td></tr>
+                    <tr><td>2</td><td>Банальная сказка</td></tr>
+                    <tr><td>3</td><td>Берем всё вино на себя</td></tr>
+                    <tr><td>4</td><td>Светик-Правдоцветик</td></tr>
+                    <tr><td>5</td><td>Пёс да Лис 2.0</td></tr>
+                    <tr><td>6</td><td>Компот из, сука, фруктов</td></tr>
+                    <tr><td>7</td><td>Психические элементали</td></tr>
+                    <tr><td>8</td><td>The Witches</td></tr>
+                    <tr><td>9</td><td>PZ⚡DC</td></tr>
+                    <tr><td>10</td><td>Easy Win</td></tr>
                 </table>
             </div>
         </div>
-        <div id="game-7" class="game">
+        <!--<div id="game-7" class="game">
             <p>Игра 7</p>
             <div class="mafia-table">
                 <p>Стол 1</p>
