[ES] Version 0.1.0 was created

--- a/esperanto/index.html
+++ b/esperanto/index.html
@@ -3,12 +3,20 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css">
+    <script type = "text/JavaScript" src = "https://underscorejs.org/underscore-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/main.js"></script>
 </head>
 <body>
     <h1>Эсперанто!</h1>
     <div class="content">
+        <div class='item-pair'>
+            <div class="russian-item">
 
+            </div>
+            <div class="esperanto-item">
+
+            </div>
+        </div>
     </div>
 </body>
