--- a/esperanto/index.html
+++ b/esperanto/index.html
@@ -1,22 +1,24 @@
 <head>
     <title>Esperanto</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/esperanto-logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type = "text/JavaScript" src = "https://underscorejs.org/underscore-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/main.js"></script>
 </head>
 <body>
-    <h1>Эсперанто!</h1>
+   <img class="header-image" src="images/esperanto-bg.png" />
     <div class="content">
         <div class='item-pair'>
             <div class="russian-item">
-
             </div>
             <div class="esperanto-item">
-
             </div>
+        </div>
+        <div class="congratulation">
+            <p class='congratulation-info'>Gratulon!</p><p class='try-again'>Ĉu vi volas ripeti?</p>
         </div>
     </div>
 </body>
