[ES] Version 1.1.5 counter was added and link was removed

--- a/esperanto/index.html
+++ b/esperanto/index.html
@@ -11,8 +11,8 @@
 <body>
    <img class="header-image" src="images/esperanto-bg.png" />
     <div class="content">
-        <div class="congratulation">
-            <p class='congratulation-info'>Gratulon!</p><p class='try-again'>Ĉu vi volas ripeti?</p>
+        <div class="counter">
+            <p class='counter-word'>Слов: <span id="counter-word">0</span></p><p class='counter-error'>Ошибок: <span id="counter-error">0</span></p>
         </div>
         <div class='item-pair'>
             <div class="russian-item">
