[ES] Version 1.1.6 Refresh button was added

--- a/esperanto/index.html
+++ b/esperanto/index.html
@@ -20,5 +20,6 @@
             <div class="esperanto-item">
             </div>
         </div>
+        <img class="refresh-link" src="https://images.freeimages.com/fic/images/icons/990/vistaico_toolbar/256/refresh.png" />
     </div>
 </body>
