--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -147,7 +147,7 @@
         </div>
         <div class="player-wrapper">
             <div class="player"></div>
-            <p>Керли</p>
+            <p>Curly</p>
             <p>5 500</p>
         </div>
         <div class="player-wrapper">
