[S2] Fanstasy was created

--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -9,34 +9,35 @@
     <script src="../etc/scripts/fantasy.js"></script>
 </head>
 <body>
+    <h1>Sakura Fantasy</h1>
     <div class="main">
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div style="background-image: url(../etc/images/players/Artik.jpeg);" class="player"></div>
             <p>Артик</p>
             <p>10 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div style="background-image: url(../etc/images/players/Arhi.jpeg);" class="player"></div>
             <p>Архи</p>
             <p>10 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div style="background-image: url(../etc/images/players/Inter.jpeg);" class="player"></div>
             <p>Интерактив</p>
             <p>10 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div style="background-image: url(../etc/images/players/Sergeevna.jpeg);" class="player"></div>
             <p>Сергеевна</p>
             <p>9 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Bonya.jpeg);"></div>
             <p>Боня</p>
             <p>9 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Sovest.jpeg);"></div>
             <p>Совесть</p>
             <p>9 000</p>
         </div>
@@ -46,37 +47,37 @@
             <p>9 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Young.jpeg);"></div>
             <p>Young</p>
             <p>8 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Yria.jpeg);"></div>
             <p>Юрия</p>
             <p>8 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Skarlet.jpeg);"></div>
             <p>Скарлетт</p>
             <p>8 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Pcela.jpeg);"></div>
             <p>Пчела</p>
             <p>8 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Moriarti.jpeg);"></div>
             <p>Мориарти</p>
             <p>7 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Sarancha.jpeg);"></div>
             <p>Саранча</p>
             <p>7 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Vesna.jpeg);"></div>
             <p>Весна</p>
             <p>7 500</p>
         </div>
