[S2] All images was loaded

--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -42,7 +42,7 @@
             <p>9 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Jnec.jpeg);"></div>
             <p>Жнец</p>
             <p>9 000</p>
         </div>
@@ -82,82 +82,82 @@
             <p>7 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Michael.jpeg);"></div>
             <p>Michael</p>
             <p>7 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Gadfour.jpeg);"></div>
             <p>Gadfour</p>
             <p>7 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Leksa.jpeg);"></div>
             <p>Лекса</p>
             <p>7 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Lina.jpeg);"></div>
             <p>Lina</p>
             <p>7 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Morti.jpeg);"></div>
             <p>Morti</p>
             <p>7 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/ZK.jpeg);"></div>
             <p>Злая Киса</p>
             <p>6 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Margo.jpeg);"></div>
             <p>Марго</p>
             <p>6 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Sponjik.jpeg);"></div>
             <p>Спонжик</p>
             <p>6 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Bestia.jpeg);"></div>
             <p>Бестия</p>
             <p>6 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Cherry.png);"></div>
             <p>Cherry pick</p>
             <p>6 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Gribochki.jpeg);"></div>
             <p>Грибочки</p>
             <p>6 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Roket.jpeg);"></div>
             <p>Rocket Woman</p>
             <p>6 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Jane.jpeg);"></div>
             <p>Джейн</p>
             <p>5 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Curly.jpeg);"></div>
             <p>Curly</p>
             <p>5 500</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Maneken.jpeg);"></div>
             <p>Манекен</p>
             <p>5 000</p>
         </div>
         <div class="player-wrapper">
-            <div class="player"></div>
+            <div class="player" style="background-image: url(../etc/images/players/Karas.jpeg);"></div>
             <p>Карась</p>
             <p>5 000</p>
         </div>
