[S2] fps demo version was created

--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Sakura Fantasy</h1>
+    <p class="points">FPS: <span class="user-points">0</span> / 29000</p>
+    <button class="team-button">Create Team</button>
     <div class="main">
         <div class="player-wrapper">
             <div style="background-image: url(../etc/images/players/Artik.jpeg);" class="player"></div>
