[S2] FPS small refactoring

--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -9,9 +9,11 @@
     <script src="../etc/scripts/fantasy.js"></script>
 </head>
 <body>
-    <h1>Sakura Fantasy</h1>
-    <p class="points">FPS: <span class="user-points">0</span> / 29000</p>
-    <button class="team-button">Create Team</button>
+    <div class="sticky">
+        <h1>Sakura Fantasy</h1>
+        <p class="points">FPS: <span class="user-points">0</span> / 29000</p>
+        <button class="team-button">Create Team</button>
+    </div>
     <div class="main">
         <div class="player-wrapper">
             <div style="background-image: url(../etc/images/players/Artik.jpeg);" class="player"></div>
