--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -42,7 +42,7 @@
         </div>
         <div class="player-wrapper">
             <div class="player" style="background-image: url(../etc/images/players/Sovest.jpeg);"></div>
-            <p>Совесть</p>
+            <p>SOVEST</p>
             <p>9 000</p>
         </div>
         <div class="player-wrapper">
