[S2] Sakura Fantasy table was created

--- a/sakura/content/fantasy.html
+++ b/sakura/content/fantasy.html
@@ -2,7 +2,7 @@
     <title>Sakura Fantasy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="../etc/styles/fantasy.css" type="image/x-icon" />
+    <link rel="shortcut icon" href="../etc/images/sakura.jpeg" type="image/x-icon" />
     <link rel="stylesheet" href="../etc/styles/fantasy.css">
     <script type = "text/JavaScript" src = "https://underscorejs.org/underscore-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
