--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -13,11 +13,9 @@
     <div class="divisions">
         <p id="teams">Командый</p>
         <p id="solo">Личный</p>
+        <p id="fantasy">Fantasy</p>
     </div>
-    <div class="main-table">
-
-    </div>
-    <div class="solo-table">
-
-    </div>
+    <div class="main-table"></div>
+    <div class="solo-table"></div>
+    <div class="fantasy-table"></div>
 </body>
