[S2] Event 1 was added

--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -14,8 +14,168 @@
         <p id="teams">Командый</p>
         <p id="solo">Личный</p>
         <p id="fantasy">Fantasy</p>
+        <p id="games">Игры</p>
     </div>
     <div class="main-table"></div>
     <div class="solo-table"></div>
     <div class="fantasy-table"></div>
+    <div class="games-table">
+        <h3>Серия 1</h3>
+        <div class="seria-table">
+            <table>
+                <tr>
+                    <th rowspan="2">#</th>
+                    <th rowspan="2">Игрок</th>
+                    <th colspan="2">Игра 1</th>
+                    <th colspan="2">Игра 2</th>
+                    <th colspan="2">Игра 3</th>
+                    <th colspan="2">Игра 4</th>
+                    <th colspan="2">Игра 5</th>
+                    <th colspan="2">Игра 6</th>
+                    <th colspan="2">Игра 7</th>
+                    <th rowspan="2">Ci</th>
+                    <th rowspan="2">Сумма</th>
+                </tr>
+                <tr>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                    <th>Поб.</th><th>Вед.</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Бестия</td>
+                    <td></td><td>2,75</td>
+                    <td>2</td><td>3,25</td>
+                    <td>2</td><td>4</td>
+                    <td></td><td>2,75</td>
+                    <td>2</td><td>3,75</td>
+                    <td>2</td><td>2,75</td>
+                    <td class="don">2<td>3,25</td>
+                    <td>0</td>
+                    <td>32,5</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Пчела</td>
+                    <td class="don">2</td><td>3,75</td>
+                    <td></td><td>2,5</td>
+                    <td class="don">2</td><td>2,75</td>
+                    <td>2</td><td>3</td>
+                    <td></td><td>2,25</td>
+                    <td>2</td><td>2,75</td>
+                    <td></td><td>3</td>
+                    <td>0</td>
+                    <td>28</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Gadfour</td>
+                    <td></td><td>3,75</td>
+                    <td></td><td>1,75</td>
+                    <td></td><td>3,25</td>
+                    <td></td><td>2,25</td>
+                    <td>2,5</td><td class="first">3,25</td>
+                    <td>2</td><td>3</td>
+                    <td>2</td><td>3,25</td>
+                    <td>0,25</td>
+                    <td>27,25</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Боня</td>
+                    <td></td><td>2,75</td>
+                    <td></td><td>3</td>
+                    <td>2</td><td>2,5</td>
+                    <td>2</td><td>2,25</td>
+                    <td>2</td><td>2,5</td>
+                    <td>2</td><td>3</td>
+                    <td></td><td>2,5</td>
+                    <td>0</td>
+                    <td>26,5</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Лекса</td>
+                    <td>2</td><td>2,75</td>
+                    <td>2</td><td>3,5</td>
+                    <td></td><td>2,25</td>
+                    <td class="sheriff"></td><td>3,75</td>
+                    <td>2</td><td>2,75</td>
+                    <td class="don"></td><td>1,5</td>
+                    <td></td><td>3,5</td>
+                    <td>0</td>
+                    <td>26</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Скарлетт</td>
+                    <td class="sheriff"></td><td class="first">2,25</td>
+                    <td class="don">2</td><td>3,25</td>
+                    <td></td><td>3</td>
+                    <td></td><td>1,5</td>
+                    <td>2</td><td>3</td>
+                    <td>2</td><td>2,75</td>
+                    <td class="sheriff"></td><td class="first">1,75</td>
+                    <td>2</td>
+                    <td>25,5</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Michael</td>
+                    <td></td><td>2,5</td>
+                    <td></td><td>2,5</td>
+                    <td></td><td>2,25</td>
+                    <td class="don">2</td><td>4,25</td>
+                    <td class="don"></td><td>2</td>
+                    <td></td><td>2,25</td>
+                    <td>2</td><td>3,25</td>
+                    <td>0</td>
+                    <td>23</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Юрия</td>
+                    <td></td><td>2</td>
+                    <td class="sheriff"></td><td class="first">2,5</td>
+                    <td></td><td>2,5</td>
+                    <td></td><td>1,75</td>
+                    <td class="sheriff">2</td><td>2,75</td>
+                    <td class="sheriff">2</td><td>3,75</td>
+                    <td></td><td>2,5</td>
+                    <td>0,5</td>
+                    <td>22,25</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Young</td>
+                    <td>2</td><td>2,75</td>
+                    <td></td><td>2</td>
+                    <td></td><td>1,75</td>
+                    <td></td><td>2,5</td>
+                    <td></td><td>2,25</td>
+                    <td>2</td><td>2,75</td>
+                    <td></td><td>3</td>
+                    <td>0</td>
+                    <td>21</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Саранча</td>
+                    <td></td><td>1,75</td>
+                    <td class="card">-0,5</td><td>2,75</td>
+                    <td class="sheriff"></td><td>2,75</td>
+                    <td></td><td>2,5</td>
+                    <td>2</td><td>4,25</td>
+                    <td></td><td>2,5</td>
+                    <td></td><td>1,5</td>
+                    <td>0</td>
+                    <td>19,5</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
