--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -48,132 +48,132 @@
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>Жнец</td>
-                        <td class="don">2</td><td>4</td>
-                        <td>2</td><td>3,25</td>
+                        <td>Юрия</td>
+                        <td>2</td><td>2,5</td>
                         <td>2</td><td>3,75</td>
                         <td>2</td><td>3,75</td>
+                        <td>2</td><td>3,5</td>
                         <td></td><td>2,25</td>
+                        <td>2</td><td>4</td>
                         <td>2</td><td>3,25</td>
-                        <td></td><td>2,25</td>
                         <td>0</td>
-                        <td>32,5</td>
+                        <td>35</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Архи</td>
-                        <td></td><td class="first">2</td>
-                        <td class="sheriff">2</td><td>3,75</td>
-                        <td class="sheriff">2</td><td>3,75</td>
-                        <td>2</td><td>3,25</td>
-                        <td>2,5</td><td class="first">3,25</td>
+                        <td>Интерактив</td>
+                        <td>2,5</td><td class="first">4</td>
+                        <td>2</td><td>3,75</td>
+                        <td>2</td><td>4,5</td>
                         <td></td><td>1,75</td>
-                        <td class="sheriff"></td><td>3,25</td>
-                        <td>1,5</td>
-                        <td>31</td>
+                        <td>2</td><td class="first">3</td>
+                        <td></td><td>1,25</td>
+                        <td class="don">2</td><td>4,25</td>
+                        <td>1</td>
+                        <td>34</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Марго</td>
+                        <td>Артик</td>
+                        <td>2</td><td>4</td>
+                        <td>2</td><td class="first">2.75</td>
                         <td></td><td>2,25</td>
-                        <td>2</td><td>3</td>
-                        <td>2</td><td>3,25</td>
-                        <td>2</td><td>2,5</td>
-                        <td class="sheriff">2</td><td>3,5</td>
-                        <td class="sheriff">0.5</td><td class="first">3,25</td>
-                        <td></td><td>3,25</td>
-                        <td>0,5</td>
-                        <td>30</td>
+                        <td class="don">2</td><td>3</td>
+                        <td class="sheriff">2</td><td>3,25</td>
+                        <td></td><td class="first">2,25</td>
+                        <td></td><td class="first">2</td>
+                        <td>3,75</td>
+                        <td>31,25</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Мориарти</td>
-                        <td>2</td><td>3</td>
-                        <td></td><td>2</td>
-                        <td>2</td><td>3,25</td>
-                        <td>2</td><td>3</td>
-                        <td>2</td><td>3,5</td>
+                        <td>Весна</td>
                         <td></td><td>2,25</td>
-                        <td></td><td class="first">2,5</td>
-                        <td>0,5</td>
-                        <td>28</td>
+                        <td>2</td><td>4</td>
+                        <td>2.5</td><td class="first">3,25</td>
+                        <td></td><td>3,25</td>
+                        <td>2</td><td>2,5</td>
+                        <td></td><td>2,75</td>
+                        <td class="sheriff"></td><td>2,5</td>
+                        <td>0,25</td>
+                        <td>27,25</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>Cherry Pick</td>
-                        <td></td><td>3,25</td>
-                        <td>2</td><td>3</td>
-                        <td></td><td>1,75</td>
-                        <td class="sheriff">2</td><td>3,25</td>
-                        <td>2</td><td>3,25</td>
+                        <td>Манекен</td>
+                        <td>2</td><td>3,5</td>
+                        <td>2</td><td>2</td>
                         <td>2</td><td>3,75</td>
-                        <td></td><td>1,5</td>
+                        <td></td><td>3</td>
+                        <td>2</td><td>2,5</td>
+                        <td class="sheriff"></td><td>3,25</td>
+                        <td></td><td>1</td>
                         <td>0</td>
-                        <td>27,75</td>
+                        <td>27</td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>Сергеевна</td>
-                        <td></td><td>1,5</td>
-                        <td>2</td><td>2,5</td>
-                        <td></td><td>2</td>
-                        <td>2</td><td class="first">2,75</td>
-                        <td>2</td><td>3.5</td>
-                        <td></td><td>1.75</td>
-                        <td>2</td><td>4,25</td>
-                        <td>0,25</td>
-                        <td>26,5</td>
+                        <td>Curly</td>
+                        <td>2</td><td>3,25</td>
+                        <td></td><td>2,5</td>
+                        <td class="don"></td><td>1,5</td>
+                        <td class="sheriff"></td><td>2,75</td>
+                        <td>2</td><td>3.25</td>
+                        <td class="don">2</td><td>2</td>
+                        <td>2</td><td>3,75</td>
+                        <td>0</td>
+                        <td>27</td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>Пчела</td>
-                        <td class="sheriff"></td><td>2,5</td>
-                        <td></td><td>2,25</td>
-                        <td>2</td><td>3,5</td>
-                        <td>2</td><td>3,25</td>
+                        <td>Cherry Pick</td>
+                        <td class="sheriff">2</td><td>3,5</td>
+                        <td class="don"></td><td>1,5</td>
+                        <td class="sheriff">2</td><td>3,5</td>
+                        <td></td><td>3,5</td>
                         <td>2</td><td>4</td>
-                        <td></td><td>2</td>
-                        <td></td><td>2,75</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>2,25</td>
                         <td>0</td>
-                        <td>26,25</td>
+                        <td>25,75</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>Rocket Woman</td>
-                        <td>2</td><td>3,25</td>
-                        <td>2</td><td>3</td>
+                        <td>Сергеевна</td>
+                        <td>2</td><td>2,75</td>
                         <td>2</td><td>3,5</td>
-                        <td class="don"></td><td>2,5</td>
+                        <td>2</td><td>4,5</td>
+                        <td></td><td>1,5</td>
                         <td></td><td>2,25</td>
-                        <td></td><td>3,25</td>
                         <td></td><td>2,25</td>
-                        <td>0</td>
-                        <td>26</td>
-                    </tr>
-                    <tr>
-                        <td>9</td>
-                        <td>Lina</td>
-                        <td></td><td>2,5</td>
-                        <td>2</td><td>2,5</td>
-                        <td>2</td><td>3,5</td>
-                        <td></td><td>2,5</td>
-                        <td class="don"></td><td>2,75</td>
-                        <td></td><td>2,75</td>
-                        <td class="don">2</td><td>2</td>
+                        <td></td><td>1,75</td>
                         <td>0</td>
                         <td>24,5</td>
                     </tr>
                     <tr>
-                        <td>10</td>
-                        <td>Лекса</td>
-                        <td></td><td>1,5</td>
-                        <td class="don"></td><td>1,75</td>
-                        <td class="don"></td><td>2</td>
-                        <td></td><td>2</td>
-                        <td>2</td><td>3,5</td>
-                        <td class="don">2</td><td>1,5</td>
-                        <td>2</td><td>2,5</td>
+                        <td>9</td>
+                        <td>Марго</td>
+                        <td></td><td>2,25</td>
+                        <td></td><td>2,25</td>
+                        <td>2</td><td>4</td>
+                        <td>2</td><td>1,5</td>
+                        <td>2</td><td>2,25</td>
+                        <td></td><td>3</td>
+                        <td></td><td>2,25</td>
                         <td>0</td>
+                        <td>23,5</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Джейн</td>
+                        <td class="don"></td><td>2</td>
+                        <td class="sheriff">2</td><td>3,25</td>
+                        <td></td><td>2</td>
+                        <td></td><td class="first">2.5</td>
+                        <td class="don"></td><td>1,5</td>
+                        <td>2</td><td>2,25</td>
+                        <td></td><td>2,75</td>
+                        <td>0.5</td>
                         <td>20,75</td>
                     </tr>
                 </table>
