[S2] Fantasy Selection was added

--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -9,7 +9,7 @@
     <script src="../etc/scripts/sakura-table.js"></script>
 </head>
 <body>
-    <h1>Sakura Table</h1>
+    <h1>Sakura ||</h1>
     <div class="divisions">
         <a id="teams" href="#teams-table">Командый</a>
         <a id="solo" href="#solo-table">Личный</a>
