--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -21,6 +21,165 @@
     <div class="fantasy-table"></div>
     <div class="games-table">
         <div>
+            <h3>Серия 6</h3>
+            <div class="seria-table">
+                <table>
+                    <tr>
+                        <th rowspan="2">#</th>
+                        <th rowspan="2">Игрок</th>
+                        <th colspan="2">Игра 1</th>
+                        <th colspan="2">Игра 2</th>
+                        <th colspan="2">Игра 3</th>
+                        <th colspan="2">Игра 4</th>
+                        <th colspan="2">Игра 5</th>
+                        <th colspan="2">Игра 6</th>
+                        <th colspan="2">Игра 7</th>
+                        <th rowspan="2">Ci</th>
+                        <th rowspan="2">Сумма</th>
+                    </tr>
+                    <tr>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Спонжик</td>
+                        <td>2</td><td>3,5</td>
+                        <td class="don">2</td><td>3,75</td>
+                        <td class="don"></td><td>1,5</td>
+                        <td>2</td><td>2,75</td>
+                        <td class="sheriff">2</td><td>2,75</td>
+                        <td class="don">2</td><td>3</td>
+                        <td>2</td><td>3,5</td>
+                        <td>0</td>
+                        <td>32,75</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Архи</td>
+                        <td>2</td><td>4.5</td>
+                        <td>2</td><td>3,25</td>
+                        <td>2</td><td>3,25</td>
+                        <td>2</td><td>3,5</td>
+                        <td class="don"></td><td>1,25</td>
+                        <td class="sheriff"></td><td>2,25</td>
+                        <td>2</td><td>3,25</td>
+                        <td>0</td>
+                        <td>31,25</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Злая Киса</td>
+                        <td>2</td><td>3,75</td>
+                        <td>2</td><td>3,5</td>
+                        <td>2</td><td>3,5</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>3</td>
+                        <td></td><td>1,5</td>
+                        <td>2</td><td>3,75</td>
+                        <td>0</td>
+                        <td>30,75</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Интерактив</td>
+                        <td>2</td><td class="first">2,75</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,5</td>
+                        <td>2</td><td>2</td>
+                        <td>2</td><td>3</td>
+                        <td>2</td><td>4</td>
+                        <td>2,5</td><td class="first">3</td>
+                        <td>1</td>
+                        <td>30,75</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>SOVEST</td>
+                        <td class="sheriff">2</td><td>3,25</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>2,5</td>
+                        <td>2</td><td>2,75</td>
+                        <td>2,5</td><td class="first">3,25</td>
+                        <td>2</td><td>3,75</td>
+                        <td class="don"></td><td>1,75</td>
+                        <td>0,25</td>
+                        <td>29,75</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>Жнец</td>
+                        <td>2</td><td>3,5</td>
+                        <td></td><td>1,5</td>
+                        <td>2</td><td>3,5</td>
+                        <td>2</td><td>2,5</td>
+                        <td>2</td><td>2</td>
+                        <td></td><td>2,25</td>
+                        <td class="sheriff">2</td><td>4</td>
+                        <td>0</td>
+                        <td>29,25</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Манекен</td>
+                        <td>2</td><td>3,5</td>
+                        <td class="sheriff"></td><td>1,75</td>
+                        <td class="sheriff">2</td><td>3</td>
+                        <td>2</td><td>3,25</td>
+                        <td>2</td><td>2,75</td>
+                        <td></td><td>1,25</td>
+                        <td>2</td><td>3,5</td>
+                        <td>0</td>
+                        <td>29</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>Rocket Woman</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td class="first">1,5</td>
+                        <td>2</td><td>3,5</td>
+                        <td class="sheriff">2</td><td>3,25</td>
+                        <td>2</td><td>2,25</td>
+                        <td></td><td class="first">2</td>
+                        <td></td><td>2,25</td>
+                        <td>2</td>
+                        <td>25,25</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Бестия</td>
+                        <td></td><td>2</td>
+                        <td></td><td>3,75</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>3,25</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>1,25</td>
+                        <td>2</td><td>4</td>
+                        <td>0</td>
+                        <td>21,25</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Морти</td>
+                        <td class="don"></td><td>1,75</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td class="first">2,5</td>
+                        <td class="don"></td><td>2</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>3,25</td>
+                        <td></td><td>2</td>
+                        <td>0,25</td>
+                        <td>18</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div>
             <h3>Серия 5</h3>
             <div class="seria-table">
                 <table>
