[S2] Table 8 was updated

--- a/sakura/content/table.html
+++ b/sakura/content/table.html
@@ -21,6 +21,324 @@
     <div class="fantasy-table"></div>
     <div class="games-table">
         <div>
+            <h3>Серия 8</h3>
+            <div class="seria-table">
+                <table>
+                    <tr>
+                        <th rowspan="2">#</th>
+                        <th rowspan="2">Игрок</th>
+                        <th colspan="2">Игра 1</th>
+                        <th colspan="2">Игра 2</th>
+                        <th colspan="2">Игра 3</th>
+                        <th colspan="2">Игра 4</th>
+                        <th colspan="2">Игра 5</th>
+                        <th colspan="2">Игра 6</th>
+                        <th colspan="2">Игра 7</th>
+                        <th rowspan="2">Ci</th>
+                        <th rowspan="2">Сумма</th>
+                    </tr>
+                    <tr>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Cherry Pick</td>
+                        <td>2</td><td>3,25</td>
+                        <td></td><td>2,25</td>
+                        <td class="don">2</td><td>3</td>
+                        <td>2</td><td>4,25</td>
+                        <td></td><td>3,5</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>3,75</td>
+                        <td>0</td>
+                        <td>29,75</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Lina</td>
+                        <td>2</td><td class="first">3,25</td>
+                        <td></td><td>3</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>2</td>
+                        <td>2</td><td>3,75</td>
+                        <td class="don">2</td><td>4</td>
+                        <td></td><td>1,5</td>
+                        <td>0,25</td>
+                        <td>27,5</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Пчела</td>
+                        <td>2</td><td>3,5</td>
+                        <td></td><td class="first">2,75</td>
+                        <td></td><td>2</td>
+                        <td class="don">2</td><td>2,5</td>
+                        <td class="don">2</td><td>3,5</td>
+                        <td class="sheriff">-0,5</td><td class="card">2,25</td>
+                        <td class="don">2</td><td>2,5</td>
+                        <td>0,5</td>
+                        <td>27</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>SOVEST</td>
+                        <td class="don"></td><td>1,75</td>
+                        <td class="sheriff"></td><td>2,5</td>
+                        <td>2</td><td>4,25</td>
+                        <td></td><td>1,75</td>
+                        <td></td><td>2,25</td>
+                        <td>2</td><td>3,5</td>
+                        <td>2</td><td>3,75</td>
+                        <td>0</td>
+                        <td>25,75</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Спонжик</td>
+                        <td>2</td><td>2,25</td>
+                        <td>2</td><td>2,5</td>
+                        <td>2</td><td>2,75</td>
+                        <td></td><td>3</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td class="first">2,5</td>
+                        <td></td><td>2,5</td>
+                        <td>0,5</td>
+                        <td>24,5</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>Сергеевна</td>
+                        <td></td><td>2,5</td>
+                        <td class="don">2</td><td>3,75</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,5</td>
+                        <td>2</td><td>3</td>
+                        <td></td><td>1,75</td>
+                        <td class="sheriff">0,5</td><td class="first">3,25</td>
+                        <td>0,5</td>
+                        <td>23,75</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Архи</td>
+                        <td class="sheriff">2</td><td>4</td>
+                        <td>2</td><td>3,5</td>
+                        <td></td><td>2,25</td>
+                        <td class="sheriff"></td><td class="first">2,25</td>
+                        <td></td><td>1,75</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,5</td>
+                        <td>0,5</td>
+                        <td>22,75</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>Весна</td>
+                        <td>2</td><td>4</td>
+                        <td></td><td>1,25</td>
+                        <td class="sheriff"></td><td class="first">2</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,25</td>
+                        <td>2</td><td>3,5</td>
+                        <td></td><td>2</td>
+                        <td>0,5</td>
+                        <td>21,5</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Артик</td>
+                        <td>2</td><td>3,75</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>2,75</td>
+                        <td class="sheriff"></td><td class="first">1,5</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>2</td>
+                        <td>0.5</td>
+                        <td>19</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Морти</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,25</td>
+                        <td></td><td>2,75</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>2,25</td>
+                        <td></td><td>2</td>
+                        <td></td><td>2,25</td>
+                        <td>0</td>
+                        <td>16</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div>
+            <h3>Серия 7</h3>
+            <div class="seria-table">
+                <table>
+                    <tr>
+                        <th rowspan="2">#</th>
+                        <th rowspan="2">Игрок</th>
+                        <th colspan="2">Игра 1</th>
+                        <th colspan="2">Игра 2</th>
+                        <th colspan="2">Игра 3</th>
+                        <th colspan="2">Игра 4</th>
+                        <th colspan="2">Игра 5</th>
+                        <th colspan="2">Игра 6</th>
+                        <th colspan="2">Игра 7</th>
+                        <th rowspan="2">Ci</th>
+                        <th rowspan="2">Сумма</th>
+                    </tr>
+                    <tr>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                        <th>Поб.</th><th>Вед.</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Интерактив</td>
+                        <td>0,5</td><td class="first">3,5</td>
+                        <td>2</td><td>3,75</td>
+                        <td>2</td><td>1,75</td>
+                        <td>2</td><td>3,75</td>
+                        <td></td><td>1,5</td>
+                        <td>2</td><td>4,75</td>
+                        <td></td><td>1,5</td>
+                        <td>0,5</td>
+                        <td>29,5</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Скарлетт</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>2,75</td>
+                        <td>2</td><td>3,5</td>
+                        <td>2</td><td>3,25</td>
+                        <td class="don">2</td><td>3,5</td>
+                        <td class="don">2</td><td>2</td>
+                        <td></td><td>2</td>
+                        <td>0</td>
+                        <td>28,75</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Бестия</td>
+                        <td></td><td>3,5</td>
+                        <td></td><td>1,75</td>
+                        <td></td><td>2,5</td>
+                        <td class="sheriff"></td><td>2,25</td>
+                        <td>2</td><td>3,75</td>
+                        <td>2</td><td>2,5</td>
+                        <td>2</td><td>3,5</td>
+                        <td>0</td>
+                        <td>25,75</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Юрия</td>
+                        <td></td><td>2,25</td>
+                        <td class="don">2</td><td>3</td>
+                        <td>2</td><td class="first">2,25</td>
+                        <td class="don">2</td><td>2,25</td>
+                        <td>2</td><td>3</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>2</td>
+                        <td>0,25</td>
+                        <td>24,5</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Злая Киса</td>
+                        <td>2</td><td>3,5</td>
+                        <td>-0,5</td><td class="card">1,75</td>
+                        <td class="sheriff">2</td><td>3</td>
+                        <td></td><td class="minus">1,25</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td class="first">2,5</td>
+                        <td class="don">2</td><td>2,5</td>
+                        <td>0,5</td>
+                        <td>22</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>SOVEST</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>3,25</td>
+                        <td></td><td>1,75</td>
+                        <td></td><td class="first">2,5</td>
+                        <td></td><td>1,75</td>
+                        <td>2</td><td>4</td>
+                        <td>0,5</td>
+                        <td>21</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Карась</td>
+                        <td>2</td><td>3,25</td>
+                        <td></td><td class="minus">1,5</td>
+                        <td class="don"></td><td>1,75</td>
+                        <td>1</td><td class="first">3,25</td>
+                        <td></td><td>2,25</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>2,5</td>
+                        <td>0,5</td>
+                        <td>20,5</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>Rocket Woman</td>
+                        <td class="sheriff"></td><td>2,5</td>
+                        <td></td><td>2</td>
+                        <td>2</td><td>3,25</td>
+                        <td></td><td>2,25</td>
+                        <td></td><td>3</td>
+                        <td>-0,5</td><td class="card">2,5</td>
+                        <td></td><td>3</td>
+                        <td>0</td>
+                        <td>20</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Gadfour</td>
+                        <td class="don">2</td><td>3</td>
+                        <td class="sheriff"></td><td class="first">2,25</td>
+                        <td>2</td><td>3,75</td>
+                        <td></td><td>2</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>1,5</td>
+                        <td>0.5</td>
+                        <td>20</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Морти</td>
+                        <td></td><td>1,5</td>
+                        <td></td><td>1,75</td>
+                        <td></td><td>2,5</td>
+                        <td></td><td>1,75</td>
+                        <td class="sheriff"></td><td>2,75</td>
+                        <td></td><td>1,75</td>
+                        <td class="sheriff"></td><td>3,5</td>
+                        <td>0</td>
+                        <td>15,5</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div>
             <h3>Серия 6</h3>
             <div class="seria-table">
                 <table>
