--- a/consigliere/total.html
+++ b/consigliere/total.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/new.js"></script>
 </head>
 <body>
     <div class="total-wrapper">
