--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts/timetable.js"></script>
 </head>
 <body>
 <div class="total-wrapper">
@@ -76,7 +78,6 @@
         </div>
     </div>
 </div>
-<a href="#" class="top">Back to Top &#8593;</a>
 </body>
 <footer>
 </footer>
